[project]
name = "meme-stickers-hub"
version = "0"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "cookit[pydantic]>=0.8.5",
    "yarl>=1.18.3",
    "httpx>=0.27.2",
    "rich>=13.9.4",
    "tenacity>=9.0.0",
]
requires-python = ">=3.9"
license = { text = "MIT" }

[dependency-groups]
dev = []

[tool.pdm]
distribution = false

[tool.pdm.scripts]
transform = { call = "scripts.transform_sekai_like:main" }
